Exercises/Intro/ingress-exercise/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-probes-deployment
  namespace: test
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: proxy # MUST match pod labels
  template:
    metadata:
      labels:
        app.kubernetes.io/name: proxy
    spec:
      containers:
        - name: nginx
          image: nginx:1.14.2
          ports:
            - name: http-web-svc
              containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: http-web-svc
            initialDelaySeconds: 3
            periodSeconds: 3
          startupProbe:
            httpGet:
              path: /
              port: http-web-svc
            failureThreshold: 30
            periodSeconds: 10
